@@ -12,6 +12,9 @@ Version 4.3.1 (development)
 ===========================
 - Added support for hr-adaptivity using TMOP-based error estimator.
 
+- Added initial support for benchmarks based on the google-benchmark library in
+  the tests/benchmarks directory.
+
 
 Version 4.3, released on July 29, 2021
 ======================================
